webstatic-core, spring5/6: changed api versioning